--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.vscode/
 node_modules
 .DS_Store
 dist
@@ -18,7 +18,6 @@ package-lock.json
 /cypress/screenshots/
 
 # Editor directories and files
-.vscode
 !.vscode/extensions.json
 .idea
 *.suo
